@@ -1,7 +1,8 @@
 Current Version: @@VERSION@@
 
-ctags-5.2.1 (Tue Jan 01 2002)
+ctags-5.2.1 (Thu Jan 03 2002)
 * Portabilitiy fixes [Mingw32].
+* Added "RCS" and "CVS" to list of directories excluded by default.
 
 ctags-5.2 (Sun Dec 23 2001)
 * Portabilitiy fixes [HP-UX, Solaris, VMS, OS/2].
